# workerplex

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/workerplex/: Exceptions.cpp  Worker.hpp  Workerplex.cpp  Workerplex.hpp
src/: main.cpp
src/workerplex/: Workerplex.cpp  Workerplex.hpp
src/workerplex/workers/: PingPong.cpp  PingPong.hpp  Worker.hpp
src/workerplex/workers/longtask/: LongTask.hpp
src/workerplex/workers/pingpong/: PingPong.hpp
src/workers/longtask/: LongTask.cpp  LongTask.hpp
src/workers/pingpong/: PingPong.cpp  PingPong.hpp
